tests/ui/impl-trait/method-resolution3.next.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/method-resolution3.rs:21:11
   |
LL |         x.bar();
   |           ^^^ multiple `bar` found
   |
note: candidate #1 is defined in an impl for the type `Bar<i32>`
  --> $DIR/method-resolution3.rs:15:5
   |
LL |     fn bar(self) {}
   |     ^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `Bar<u32>`
  --> $DIR/method-resolution3.rs:11:5
   |
LL |     fn bar(self) {}
   |     ^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0034`.
